# pearpass-app-desktop

./: .env  .gitignore  .gitmodules  .prettierrc.json  CMakeLists.txt  README.md  app.js  eslint.config.js  index.html  index.js  jest.config.js  lingui.config.js  package-lock.json  package.json  styles.js
.github/workflows/: build-appling.yaml  lint.yml  merge-develop.yaml  merge-main.yaml  on-push.yaml  test.yml
appling/: CMakeLists.txt  package.json
assets/: pearpass-tou-30-07-25.html
assets/animations/: form_credit_card.riv
assets/video/: lockClosing.mov
native-messaging-bridge-dist/: commandDefinitions.js  index.js  manifest.json  utils.js
src/: autopassServer.js  autopassServer.test.js
src/constants/: feedback.js  formFields.js  languages.js  localStorage.js  recordActions.js  recordColorByType.js  recordIconByType.js  services.js  time.js
src/context/: BannerContext.js  LoadingContext.js  ModalContext.js  ModalContext.test.js  RouterContext.js  ToastContext.js  ToastContext.test.js
src/hooks/: useConnectExtension.js  useConnectExtension.test.js  useCopyToClipboard.js  useCopyToClipboard.test.js  useCountDown.js  useCreateOrEditRecord.js  useCreateOrEditRecord.test.js  useCustomFields.js  useCustomFields.test.js  useDebounce.js  useForm.js  useGetMultipleFiles.js  useGetMultipleFiles.test.js  useInactivity.js  useInactivity.test.js  useOutsideClick.js  usePearUpdate.js  usePearUpdate.test.js  useRecordActionItems.js  useRecordActionItems.test.js  useRecordMenuItems.js  useRecordMenuItems.test.js  useResize.js  useThrottle.js  useWindowResize.js
src/lib-react-components/: index.js
src/native-messaging-bridge/: commandDefinitions.js  index.js  nativeMessagingHandler.js  nativeMessagingProtocol.js  package-lock.json  package.json  utils.js
src/nativeMessaging/: nativeMessagingHandler.js  nativeMessagingHandler.test.js  nativeMessagingProtocol.js  nativeMessagingProtocol.test.js
src/scripts/: build-bridge-package.cjs  build-bridge-package.js  extension-to-ipc-bridge.js  pearpass-native-host-executable  pearpass-native-host-executable.bat
src/services/: autopassServer.js  autopassServer.test.js  clipboard.js  clipboardCleanup.js  (+8 more)
(+492 files in other folders)
